# stockscope

./: .gitignore  AGENTS.md  ANALYSIS_SPEC.md  README.md  TASKS.md  vercel.json
backend/: README.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: auth_dep.py  main.py
backend/app/api/: analyze.py  auth.py  backtest.py  catalyst.py  macro.py  news.py  portfolio.py  screen.py
backend/app/backtest/: dataset.py  engine.py  model.py
backend/app/collectors/: analyst.py  cache.py  company_name.py  dart_fundamentals.py  flows.py  fundamentals.py  insider.py  macro.py  news.py  news_macro.py  options_data.py  prices.py  risk.py  universe.py  valuation.py
backend/app/db/: connection.py  repo.py
backend/app/scoring/: analyst.py  composite.py  fundamental.py  insider.py  macro_score.py  momentum.py  options_score.py  risk.py  scenarios.py  supply_demand.py  valuation.py
backend/app/services/: catalyst.py  claude_json.py  heavy.py  macro_sentiment.py  paper_trading.py  refresh.py  screener.py  sentiment.py
backend/config/: nasdaq_universe.csv
backend/tests/: test_backtest.py  test_catalyst.py  test_dart.py  test_macro_api.py  test_momentum.py  test_paper_trading.py  test_prediction.py  test_prices.py  test_screener.py  test_universe.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CatalystPanel.tsx  FactorBreakdown.tsx  FreshnessBadge.tsx  LoginPage.tsx  MacroDashboard.tsx  MetricsPanel.tsx  NewsPanel.tsx  Portfolio.tsx  PredictPanel.tsx  (+6 more)
(+1 files in other folders)
